# llm-course-hugging-face

./: .gitignore  Makefile  README.md  pyproject.toml
src/llm_course_hugging_face/: __init__.py  environment_test.py
src/llm_course_hugging_face/chapter1/: 1_3_Transformers,_what_can_they_do_.ipynb  1_9_Bias_and_limitations.ipynb  example.py  transformers_what_can_they_do.ipynb
src/llm_course_hugging_face/chapter2/: 2_2_Behind_the_pipeline_(PyTorch).ipynb  2_3_Models_(PyTorch).ipynb  2_4_Tokenizers_(PyTorch).ipynb  2_5_Handling_multiple_sequences_(PyTorch).ipynb  2_6_Putting_it_all_together_(PyTorch).ipynb
src/llm_course_hugging_face/chapter3/: 3_2_Processing_the_data_(PyTorch).ipynb  3_3_Fine_tuning_a_model_with_the_Trainer_API_or_Keras.ipynb  3_4_A_full_training.ipynb  3_5_Understanding_Learning_Curves.ipynb
src/llm_course_hugging_face/chapter4/: 4_2_Using_pretrained_models_(PyTorch).ipynb  4_3_Sharing_pretrained_models_(PyTorch).ipynb
src/llm_course_hugging_face/chapter5/: 5_2_What_if_my_dataset_isn't_on_the_Hub_.ipynb  5_3_Time_to_slice_and_dice.ipynb  5_4_Big_data__🤗_Datasets_to_the_rescue!.ipynb  5_5_Creating_your_own_dataset.ipynb  5_6_Semantic_search_with_FAISS_(PyTorch).ipynb
src/llm_course_hugging_face/chapter6/: 6_2_Training_a_new_tokenizer_from_an_old_one.ipynb  6_3_Fast_tokenizers'_special_powers_(PyTorch).ipynb  6_3b_Fast_tokenizers_in_the_QA_pipeline_(PyTorch).ipynb  6_4_Normalization_and_pre_tokenization.ipynb  6_5_Byte_Pair_Encoding_tokenization.ipynb  6_6_WordPiece_tokenization.ipynb  6_7_Unigram_tokenization.ipynb  6_8_Building_a_tokenizer,_block_by_block.ipynb
tests/: test_basic.py  test_torch.py
