[tool.poetry]
name = "llm-course-hugging-face"
version = "0.1.0"
description = "Blank Poetry project for the LLM course on Hugging Face."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "llm_course_hugging_face", from = "src" }]

[[tool.poetry.source]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.3"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.12, <3.15"
transformers = {extras = ["sentencepiece"], version = "^5.5.0"}
ipykernel = "^7.2.0"
jupyterlab = "^4.4.0"
datasets = "^4.8.4"
evaluate = "^0.4.6"
accelerate = "^1.7.0"
scikit-learn = "^1.8.0"
wandb = "^0.26.1"
# torch = { version = "2.9.1+rocm6.3", source = "pytorch-rocm" }
ipywidgets = "^8.1.8"
faiss-cpu = "^1.13.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8,<10"


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
